Update dependency version in api's pom.xml

--- a/demo-maven-archetype/src/main/resources/archetype-resources/__rootArtifactId__-api/pom.xml
+++ b/demo-maven-archetype/src/main/resources/archetype-resources/__rootArtifactId__-api/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>${groupId}.${rootArtifactId}</groupId>
             <artifactId>service</artifactId>
-            <version>1.0.0</version>
+            <version>${version}</version>
         </dependency>
     </dependencies>
 
