--- a/demo-json/pom.xml
+++ b/demo-json/pom.xml
@@ -46,6 +46,7 @@
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
+      <optional>true</optional>
     </dependency>
     <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
     <dependency>
@@ -53,6 +54,7 @@
       <artifactId>gson</artifactId>
       <version>2.8.6</version>
       <scope>test</scope>
+      <optional>true</optional>
     </dependency>
 
   </dependencies>
