--- a/demo-lox/pom.xml
+++ b/demo-lox/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>top.wuare</groupId>
-  <artifactId>demo-algorithm</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <artifactId>demo-lox</artifactId>
+  <version>0.0.1</version>
 
-  <name>demo-algorithm</name>
+  <name>demo-lox</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -25,6 +25,4 @@
     </dependency>
   </dependencies>
 
-  <build>
-  </build>
 </project>
